--- a/package.json
+++ b/package.json
@@ -3,22 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.5"
+    "husky": "^0.14.3",
+    "lint-staged": "^4.2.3",
+    "prettier": "^1.7.4",
+    "react-scripts": "1.0.14"
   },
   "dependencies": {
-    "apollo-client": "^0.7.3",
-    "graphql-tag": "^1.2.3",
-    "react": "^15.4.2",
-    "react-apollo": "^0.8.1",
-    "react-dom": "^15.4.2",
-    "react-router": "4.0.0-alpha.6",
-    "smalldots": "^0.32.8",
-    "styled-components": "^1.3.0"
+    "bootstrap": "4.0.0-beta",
+    "classnames": "^2.2.5",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-apollo": "^1.4.16",
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^4.2.2",
+    "smalldots": "^0.36.0",
+    "styled-components": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write --single-quote --jsx-bracket-same-line",
+      "git add"
+    ]
   }
 }
